# llmplayspokemon

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  game.gb.state  progress.md  pyproject.toml
.checkpoint_smoke/: emulator.state
.claude/: settings.local.json
.plans/: PLANS.md
.plans/phases/: 01-mode-dispatcher.md  02-deterministic-controllers.md  03-overworld-controller.md  04-rom-data-import.md  05-objective-manager.md  06-recovery-system.md  07-integration-cleanup.md
.pyboy_ckpt/: emulator.json  emulator.state
.sessions/bootstrap_smoke/: checkpoint.json  emulator.json  (+1 more)
docs/: world-graph-bootstrap-import-report.md
prompts/: build_engine_master_prompt.md  milestone_executor_prompt.md
scripts/: import_pret_world_graph.py  start_game.py
tests/: test_battle_controller.py  test_config.py  test_context_manager.py  test_context_manager_recovery.py  test_cutscene_controller.py  test_debug_overlay.py  test_dialogue_controller.py  test_engine.py  test_executor.py  test_game_knowledge.py  test_llm_client.py  test_main.py  test_memory_manager.py  test_menu_controller.py  test_menu_manager.py  test_mode_dispatcher.py  test_navigation.py  test_navigator.py  test_objective_manager.py  test_overworld_controller.py  test_pokemon_red_ram_map.py  test_progress.py  test_prompt_builder.py  test_pyboy_adapter.py  test_recovery_controller.py  test_screen_renderer.py  test_start_game.py  test_state_extractor.py  test_stuck_detector.py  test_terminal_dashboard.py  test_text_reader.py  test_validator.py  test_walkthrough.py  test_world_graph.py  test_world_map.py
(+113 files in other folders)
