[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemon-llm-agent"
version = "0.1.0"
description = "Starter kit for an LLM-driven Pokemon Red agent"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "typing-extensions>=4.10",
  "rich>=13.7",
  "pyboy>=2.4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
pokemon_agent = ["generated/*.json"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
